--- a/css/scss/_silverlightOne.scss
+++ b/css/scss/_silverlightOne.scss
@@ -1,8 +1,8 @@
 
 .navbar {
-//  @include flex(center,space-around);
+ @include flex(center,space-around);
   width: 100%;
-  padding: 2px;
+  padding: 15px;
   position: fixed;
   top: 0px;
   text-align: end;
@@ -14,7 +14,7 @@
     list-style-type: none;
     display: inline-block;
     padding: 10px 50px;
-    font-size: 22px;
+    font-size: 20px;
     cursor: pointer;
     border-radius: 10px;
 
@@ -29,8 +29,8 @@
   }
 
   img {
-    width: 120px;
-    height: 100px;
+    width: 70px;
+    height: 50px;
   }
 }
 
@@ -40,6 +40,10 @@
     text-justify: auto;
     text-align: justify;
     width: 80%;
+    margin-left: 10%;
+    margin-top: 2%;
+    box-shadow: 0 2px 5px grey;
+    
 
     h1{
         color: rgb(38, 23, 248);
@@ -48,8 +52,72 @@
   img {
     margin: 3%;
     width: 30%;
-      border-radius: none;
+    box-shadow:  0 5px 5px grey;
+    border-radius: 5%;
+  }
+
+  p{
+    padding: 5%;
   }
 }
+
+.titulo__features{
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  color: #003979c5;
+}
+
+.features{
+  @include flex (center , space-around);
+  flex-direction: row;
+  
+
+  div{
+    @include flex (center , space-evenly);
+    flex-direction: column;
+    width: 20%;
+    height: 351.812px;
+    padding: 2%;
+    border-radius: 5%;
+    box-shadow: 0 5px 5px grey;
+    background-color: #00397971;
+    color: $white;
+    text-align: center;
+    text-justify: auto;
+    font-size: 16px;
+  }
+
+  img{
+    width: 100px;
+    padding: 2%;
+  }
+
+}
+
+// .info{
+//   @include flex (center , space-around);
+//   line-height:1.2em; 
+//   font-size: 88%;
+//   width:250px;
+
+//   th{
+//     background-color:#CCF;
+//     text-align:center; 
+//     font-size: 1.5em; 
+//     line-height:1.1em;
+//     padding: 0px;
+//   }
+
+//   td {
+//     vertical-align: top; 
+//     text-align: left; 
+//     text-align:left; 
+//     background-color:#CCF; 
+//     font-weight:bold; 
+//     padding:4px;
+//   }
+
+
 
     
