--- a/css/scss/_firstPage.scss
+++ b/css/scss/_firstPage.scss
@@ -37,6 +37,7 @@
 }
 
 .nav__script{
+  @include flex(center,space-around);
   width: 100%;
   padding: 10px;
   position: fixed;
@@ -63,7 +64,12 @@
   }
 
   ul li:hover {
-    background: rgba(255, 0, 106, 0.384);
+    background: rgba(243, 51, 131, 0.384);
+  }
+
+  img {
+    width: 70px;
+    height: 50px;
   }
 }
 
