--- a/css/scss/_silverlightOne.scss
+++ b/css/scss/_silverlightOne.scss
@@ -7,7 +7,7 @@
   top: 0px;
   text-align: end;
   transition: 0.5s;
-  background: #a9ffec60;
+  background: #00397971;
   z-index: 99;
 
   ul li {
@@ -71,6 +71,7 @@
 .features{
   @include flex (center , space-around);
   flex-direction: row;
+  margin: 3%;
   
 
   div{
@@ -85,7 +86,7 @@
     color: $white;
     text-align: center;
     text-justify: auto;
-    font-size: 16px;
+    font-size: 14px;
   }
 
   img{
@@ -95,29 +96,138 @@
 
 }
 
-// .info{
-//   @include flex (center , space-around);
-//   line-height:1.2em; 
-//   font-size: 88%;
-//   width:250px;
+.more{
+  text-transform: uppercase;
+  font-size: 24px;
+  align-content: center;
+  flex-direction: row-reverse;
+  display: flex;
+  margin: 3%;
 
-//   th{
-//     background-color:#CCF;
-//     text-align:center; 
-//     font-size: 1.5em; 
-//     line-height:1.1em;
-//     padding: 0px;
-//   }
+  img{
+    width: 20px;
+  }
+  img:hover{
+    color: blue;
+  }
+  a{
+    text-decoration: none;
+    color: black;
+  }
 
-//   td {
-//     vertical-align: top; 
-//     text-align: left; 
-//     text-align:left; 
-//     background-color:#CCF; 
-//     font-weight:bold; 
-//     padding:4px;
-//   }
+  a:hover{
+    color: blue;
+  }
+}
+
+.video{
+  @include flex (center , space-around);
+  color: blue;
+ 
+
+  div{
+    margin: 3%;
+  }
+
+}
+
+.videos__title{
+  h1{
+    color: blue;
+    text-align: center;
+    margin: 3%
+  }
+}
+
+.container {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
 
+.responsive-table {
+  li {
+    border-radius: 3px;
+    padding: 25px 30px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+  .table-header {
+    background-color: #95A5A6;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+  }
+  .table-row {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+  }
+  .col-1 {
+    flex-basis: 10%;
+  }
+  .col-2 {
+    flex-basis: 40%;
+  }
 
-    
+  
+  @media all and (max-width: 767px) {
+    .table-header {
+      display: none;
+    }
+    .table-row{
+      
+    }
+    li {
+      display: block;
+    }
+    .col {
+      
+      flex-basis: 100%;
+      
+    }
+    .col {
+      display: flex;
+      padding: 10px 0;
+      &:before {
+        color: #6C7A89;
+        padding-right: 10px;
+        content: attr(data-label);
+        flex-basis: 50%;
+        text-align: right;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 580px) {
+
+  .features{
+    @include flex (center , space-around);
+    flex-direction: column;
+    margin: 3%;
+   
+
+    div{
+      
+      margin: 5%;
+      flex-direction: row-reverse;
+      display: flex;
+    }
+   
+  }
+
+  .video{
+    @include flex (center , space-around);
+    flex-direction: column;
+    margin-left: -18%;
+
+    div{
+      width: 30%;
+    }
+  }
+
+}
