--- a/css/scss/_firstPage.scss
+++ b/css/scss/_firstPage.scss
@@ -5,6 +5,13 @@
   font-family: "Montserrat", sans-serif;
 }
 
+#control-nav{
+  visibility:  hidden;
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
+  }
+
 .nav__bg{
   width: 100%;
   padding: 15px;
@@ -199,15 +206,25 @@ footer {
   }
 
   p {
+   
     color: #fff;
     text-align: center;
     font-size: 13px;
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 767px) {
   header {
-    padding: 20%;
+    width: 100%;
+    margin-top: 15%;
+
+    p{
+      width: 95%;
+    }
+
+    img{
+      margin: 3%;
+    }
   }
   .apresentation {
     flex-direction: column;
@@ -222,4 +239,103 @@ footer {
       margin: 5%;
     }
   }
+}
+
+@media screen and (max-width: 767px){
+  .nav__bg{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 250px;
+  border-left: 1px solid #ccc;
+  background: #ff00c863;
+  overflow-x: auto;
+  z-index: 99;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  -webkit-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  transform: translate(100%, 0);
+  }
+
+  .nav__script{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 250px;
+    border-left: 1px solid #ccc;
+    background: #fff;
+    overflow-x: auto;
+    z-index: 99;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    -ms-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+    }
+  .control-nav {
+    position: fixed;
+    top: 20px;
+    left: 10px;
+    display: block;
+    width: 30px;
+    padding: 5px 0;
+    border: solid #333;
+    border-width: 3px 0;
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  .control-nav:before {
+    content: "";
+    display: block;
+    height: 3px;
+    background: #333;
+  }
+
+  .control-nav-close {
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    z-index: 1;
+    background: rgba(0,0,0,0.4);
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    -ms-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+  }
+
+  #control-nav{
+  visibility:  hidden;
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
+ }
+
+#control-nav {
+    display: block;
+  }
+
+#control-nav:focus ~ .control-nav {
+    border-color: #000;
+    box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
+  }
+
+#control-nav:focus ~ .control-nav:before {
+    background: #000;
+  }
+
+#control-nav:checked ~ nav,
+#control-nav:checked ~ .control-nav-close {
+    -webkit-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
 }
