--- a/css/scss/_silverlightOne.scss
+++ b/css/scss/_silverlightOne.scss
@@ -129,6 +129,11 @@
     margin: 3%;
   }
 
+  iframe{
+    width: 500px;
+    height: 450px; 
+  }
+
 }
 
 .videos__title{
@@ -167,7 +172,9 @@
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
   .col-1 {
-    flex-basis: 10%;
+    font-size: 14px;
+    color: blue;
+    
   }
   .col-2 {
     flex-basis: 40%;
@@ -176,11 +183,10 @@
   
   @media all and (max-width: 767px) {
     .table-header {
-      display: none;
+      font-size: 12px;
+      text-align: center;
     }
-    .table-row{
-      
-    }
+
     li {
       display: block;
     }
@@ -196,14 +202,35 @@
         color: #6C7A89;
         padding-right: 10px;
         content: attr(data-label);
-        flex-basis: 50%;
         text-align: right;
       }
     }
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 767px) {
+
+  .title__more{
+    font-size: 24px;
+  }
+
+  .navbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 250px;
+    border-left: 1px solid #ccc;
+    background: #00397971;
+    overflow-x: auto;
+    z-index: 2;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    -ms-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+    }
+
 
   .features{
     @include flex (center , space-around);
@@ -212,10 +239,10 @@
    
 
     div{
-      
       margin: 5%;
       flex-direction: row-reverse;
       display: flex;
+      width: 80%;
     }
    
   }
@@ -223,10 +250,10 @@
   .video{
     @include flex (center , space-around);
     flex-direction: column;
-    margin-left: -18%;
+    
 
     div{
-      width: 30%;
+      align-items: center;
     }
   }
 
