--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
   font-family: "Montserrat", sans-serif;
 }
 
+#control-nav {
+  visibility: hidden;
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
+}
+
 .nav__bg {
   width: 100%;
   padding: 15px;
@@ -285,9 +292,16 @@ footer p {
   font-size: 13px;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 767px) {
   header {
-    padding: 20%;
+    width: 100%;
+    margin-top: 15%;
+  }
+  header p {
+    width: 95%;
+  }
+  header img {
+    margin: 3%;
   }
   .apresentation {
     -webkit-box-orient: vertical;
@@ -305,6 +319,93 @@ footer p {
   .project__links img {
     width: 200px;
     margin: 5%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav__bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 250px;
+    border-left: 1px solid #ccc;
+    background: #ff00c863;
+    overflow-x: auto;
+    z-index: 99;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+  }
+  .nav__script {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 250px;
+    border-left: 1px solid #ccc;
+    background: #fff;
+    overflow-x: auto;
+    z-index: 99;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+  }
+  .control-nav {
+    position: fixed;
+    top: 20px;
+    left: 10px;
+    display: block;
+    width: 30px;
+    padding: 5px 0;
+    border: solid #333;
+    border-width: 3px 0;
+    z-index: 2;
+    cursor: pointer;
+  }
+  .control-nav:before {
+    content: "";
+    display: block;
+    height: 3px;
+    background: #333;
+  }
+  .control-nav-close {
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.4);
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+  }
+  #control-nav {
+    visibility: hidden;
+    position: absolute;
+    left: -9999px;
+    opacity: 0;
+  }
+  #control-nav {
+    display: block;
+  }
+  #control-nav:focus ~ .control-nav {
+    border-color: #000;
+    -webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.3);
+  }
+  #control-nav:focus ~ .control-nav:before {
+    background: #000;
+  }
+  #control-nav:checked ~ nav,
+  #control-nav:checked ~ .control-nav-close {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
   }
 }
 
@@ -492,6 +593,11 @@ footer p {
   margin: 3%;
 }
 
+.video iframe {
+  width: 500px;
+  height: 450px;
+}
+
 .videos__title h1 {
   color: blue;
   text-align: center;
@@ -532,8 +638,8 @@ footer p {
 }
 
 .responsive-table .col-1 {
-  -ms-flex-preferred-size: 10%;
-      flex-basis: 10%;
+  font-size: 14px;
+  color: blue;
 }
 
 .responsive-table .col-2 {
@@ -543,7 +649,8 @@ footer p {
 
 @media all and (max-width: 767px) {
   .responsive-table .table-header {
-    display: none;
+    font-size: 12px;
+    text-align: center;
   }
   .responsive-table li {
     display: block;
@@ -562,13 +669,29 @@ footer p {
     color: #6C7A89;
     padding-right: 10px;
     content: attr(data-label);
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
     text-align: right;
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 767px) {
+  .title__more {
+    font-size: 24px;
+  }
+  .navbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 250px;
+    border-left: 1px solid #ccc;
+    background: #00397971;
+    overflow-x: auto;
+    z-index: 2;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+  }
   .features {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -593,6 +716,7 @@ footer p {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    width: 80%;
   }
   .video {
     display: -webkit-box;
@@ -607,10 +731,11 @@ footer p {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-left: -18%;
   }
   .video div {
-    width: 30%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
