--- a/css/scss/_silverlightOne.scss
+++ b/css/scss/_silverlightOne.scss
@@ -61,11 +61,11 @@
   }
 }
 
-.titulo__features{
+.titulo__eco{
   text-align: center;
   margin-top: 5%;
   margin-bottom: 5%;
-  color: #003979c5;
+  color: #0c4b07;
 }
 
 .features{
