--- a/css/scss/_firstPage.scss
+++ b/css/scss/_firstPage.scss
@@ -13,6 +13,7 @@
   }
 
 .nav__bg{
+  @include flex(center,space-around);
   width: 100%;
   padding: 15px;
   position: fixed;
@@ -40,6 +41,11 @@
 
   ul li:hover {
     background: rgba(255, 0, 106, 0.384);
+  }
+
+  img {
+    width: 70px;
+    height: 65px;
   }
 }
 
