--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@
 }
 
 .nav__bg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 100%;
   padding: 15px;
   position: fixed;
@@ -44,6 +52,11 @@
 
 .nav__bg ul li:hover {
   background: rgba(255, 0, 106, 0.384);
+}
+
+.nav__bg img {
+  width: 70px;
+  height: 65px;
 }
 
 .nav__script {
@@ -490,11 +503,11 @@ footer p {
   padding: 5%;
 }
 
-.titulo__features {
+.titulo__eco {
   text-align: center;
   margin-top: 5%;
   margin-bottom: 5%;
-  color: #003979c5;
+  color: #0c4b07;
 }
 
 .features {
@@ -736,6 +749,288 @@ footer p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+
+.nav__eco {
+  width: 100%;
+  padding: 15px;
+  position: fixed;
+  top: 0px;
+  text-align: center;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background: #13e60463;
+  -webkit-box-shadow: 0 2px 5px grey;
+          box-shadow: 0 2px 5px grey;
+  z-index: 99;
+}
+
+.nav__eco ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 50px;
+  color: white;
+  font-size: 22px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.nav__eco ul li a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.nav__eco ul li:hover {
+  background: rgba(10, 105, 15, 0.76);
+}
+
+.nav__eco img {
+  width: 70px;
+  height: 50px;
+}
+
+.titulo__eco {
+  margin: 3%;
+}
+
+.texto_eco {
+  width: 90%;
+}
+
+.eco__title {
+  text-align: center;
+  margin: 3%;
+}
+
+.features_eco {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 3%;
+}
+
+.features_eco div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 20%;
+  height: 351.812px;
+  padding: 2%;
+  border-radius: 5%;
+  -webkit-box-shadow: 0 5px 5px grey;
+          box-shadow: 0 5px 5px grey;
+  background-color: #34e72e71;
+  color: black;
+  text-align: center;
+  text-justify: auto;
+  font-size: 14px;
+}
+
+.features_eco img {
+  width: 100px;
+  padding: 2%;
+}
+
+@media screen and (max-width: 767px) {
+  .features_eco {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 3%;
+  }
+  .features_eco div {
+    margin: 5%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 80%;
+  }
+  .nav__eco {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 250px;
+    border-left: 1px solid #ccc;
+    background: #13e60463;
+    overflow-x: auto;
+    z-index: 99;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
+  }
+}
+
+.container__inspirations {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.title-inspirations {
+  font-family: 'MarkOT-Bold';
+  color: #793df5;
+  font-size: 25px;
+  text-align: center;
+  padding-bottom: 15px;
+}
+
+.subtitle-inspirations {
+  text-align: center;
+  width: 41%;
+  margin: 0 auto;
+  line-height: 1.55;
+  padding-bottom: 30px;
+  font-size: 18px;
+}
+
+.slide {
+  position: relative;
+}
+
+.my-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.tns-nav {
+  padding: 20px;
+  position: relative;
+  text-align: center;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.tns-outer {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
+.tns-horizontal.tns-subpixel > .tns-item {
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+  white-space: normal;
+}
+
+.tns-outer {
+  padding: 0 !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.tns-outer [data-action] {
+  display: none;
+}
+
+.tns-nav > button {
+  width: 9px;
+  height: 9px;
+  padding: 0;
+  margin: 0 5px;
+  border-radius: 50%;
+  background: #ddd;
+  border: 0;
+}
+
+.secondArrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+}
+
+.arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+}
+
+.container__eco {
+  width: 100%;
+}
+
+@media (max-width: 420px) {
+  .container {
+    max-width: 100%;
+  }
+  .subtitle-inspirations {
+    width: 100%;
+  }
+  .img-right, .img-left {
+    width: 50px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 100%;
+  }
+  .subtitle-inspirations {
+    width: 100%;
+  }
+  .img-right, .img-right {
+    width: 50px;
   }
 }
 /*# sourceMappingURL=style.css.map */
