--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,12 @@ footer p {
   color: #0c4b07;
 }
 
+.titulo__features {
+  text-align: center;
+  color: blue;
+  margin: 3%;
+}
+
 .features {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1004,6 +1010,28 @@ footer p {
   position: absolute;
   top: 20%;
   width: 100%;
+}
+
+.left, .right {
+  padding: 30px 0px;
+}
+
+.img-slide {
+  border-radius: 100%;
+}
+
+.txt-img {
+  width: 60%;
+  margin: 0 auto;
+  padding: 20px 0px;
+}
+
+.title-img {
+  font-weight: bold;
+  font-family: 'MarkOT-Bold';
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  padding-top: 10px;
 }
 
 .container__eco {
